--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-  background: url(../img/background_main.jpg)  center no-repeat;
+  background: url(../calmontero.git.io/img/background_main.jpg)  center no-repeat;
   background-size: cover;
   background-attachment: fixed;
   font-family: Helvetica, Arial, sans-serif;
